Refactor AFIP integration and add WSFE client
Major refactor of AFIP integration: removed old AfipWsfeClient and related DTOs, added new WsfeClient and WsfeConfig using JAXB2-generated classes from wsfev1.wsdl. Updated AfipInvoiceService and authentication flow, improved caching in AfipAuthService, and reorganized DTOs under model/dto. Added documentation for AFIP architecture and authentication cache. Updated Maven and IDE configs for new dependencies and Java 25. Added BillingService and test coverage for AfipAuthService.